charts/ingress/client.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: client
  namespace: sandbox
spec:
  rules:
  - host: sandbox-ui.ghga-dev.de
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          serviceName: ghga-sandbox-ui
          servicePort: 80
  tls:
  - hosts:
    - sandbox-ui.ghga-dev.de
  - secretName: sandbox-ui-tls
