charts/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: api
  namespace: sandbox
spec:
  rules:
  - host: sandbox.api.ghga-dev.de
    http:
      paths:
      - path: /metadata(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          serviceName: ghga-sandbox-metadata
          servicePort: 80
      - path: /request(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          serviceName: ghga-sandbox-request
          servicePort: 80
      - path: /notification(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          serviceName: ghga-sandbox-notification
          servicePort: 80
      - path: /storage(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          serviceName: ghga-sandbox-storage
          servicePort: 80
  tls:
  - hosts:
    - sandbox.api.ghga-dev.de
  - secretName: sandbox-services-tls
